# axum-test

./: .gitignore  Cargo.toml  README.md
docker/: docker-compose.yml
src/: di_provider.rs  main.rs
src/config/: database_config.rs  mod.rs
src/di/: auth.rs  db.rs  mod.rs
src/handler/: auth.rs
src/infrastructure/: mod.rs  postgres.rs
src/infrastructure/repository/auth/: errors.rs  implementation.rs  traits.rs
src/repository/auth/: implementation.rs  traits.rs
src/service/auth/: errors.rs  implementation.rs  mod.rs  traits.rs
tests/: listening.rs
